--- a/public/styles/scss/layout/_responsive.scss
+++ b/public/styles/scss/layout/_responsive.scss
@@ -22,7 +22,7 @@
         width: 50%;
     }
 
-    .image {
+    #todo-list-img {
         display: block;
         border-radius: 30px;
         width: 50%;
