--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,4 +1,4 @@
-<main class="flex_dir_column">
+<main class="flex-dir-column">
     <p>This page is a personal project that I use as part of my studies to learn and delve into the fundamentals of
         web technologies. My goal is to develop a solid understanding of various aspects of web design and
         development, from HTML and CSS to JavaScript and other advanced techniques.</p>
