--- a/views/pages/tasks.ejs
+++ b/views/pages/tasks.ejs
@@ -1,13 +1,13 @@
 <main>
     <h2>To-Do List</h2>
-    <input type="text" id="taskInput" placeholder="Enter task...">
-    <select id="priorityInput">
+    <input type="text" id="task-input" placeholder="Enter task...">
+    <select id="priority-input">
         <option value="Low">Low</option>
         <option value="Medium" selected>Medium</option>
         <option value="High">High</option>
     </select>
     <button id='add-task-btn' onclick="addTask()">Add Task</button>
-    <table id="todoTable">
+    <table id="todo-table">
         <tr>
             <th>Title</th>
             <th>Description</th>
