--- a/public/styles/scss/main.scss
+++ b/public/styles/scss/main.scss
@@ -1,4 +1,4 @@
-@import 'base/base.scss';
-@import 'components/components.scss';
+@import 'base/base';
+@import 'components/components';
 @import 'layout/layout';
 @import 'pages/pages';
