Improve project structure

--- a/public/styles/scss/layout/_responsive.scss
+++ b/public/styles/scss/layout/_responsive.scss
@@ -10,7 +10,7 @@
 
 @include respond-to(large) {
 
-    .content-container {
+    .home {
         display: flex;
         flex-direction: row;
         align-items: center;
