--- a/public/styles/css/pages/pages.css
+++ b/public/styles/css/pages/pages.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *    ,
- * 50 | @each $priority, $color in $priority-colors {
- *    |                            ^^^^^^^^^^^^^^^^
+ * 51 | $color in $priority-colors {
+ *    |           ^^^^^^^^^^^^^^^^
  *    '
- *   public/styles/scss/pages/_tasks.scss 50:28  @import
+ *   public/styles/scss/pages/_tasks.scss 51:11  @import
  *   public/styles/scss/pages/pages.scss 4:9     root stylesheet */
 
 body::before {
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 50 \2502  @each $priority, $color in $priority-colors {\a    \2502                             ^^^^^^^^^^^^^^^^\a    \2575 \a   public/styles/scss/pages/_tasks.scss 50:28  @import\a   public/styles/scss/pages/pages.scss 4:9     root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 51 \2502  $color in $priority-colors {\a    \2502            ^^^^^^^^^^^^^^^^\a    \2575 \a   public/styles/scss/pages/_tasks.scss 51:11  @import\a   public/styles/scss/pages/pages.scss 4:9     root stylesheet";
 }
