--- a/public/styles/scss/base/_variables.scss
+++ b/public/styles/scss/base/_variables.scss
@@ -1,7 +1,8 @@
 $breakpoint-small: 768px;
 $breakpoint-large: 1100px;
 
-$font-stack: Arial, sans-serif;
+$font-stack: Arial,
+sans-serif;
 $base-font-size: 16px;
 
 $primary-color: #333;
@@ -16,8 +17,6 @@ $cookie-banner-text-color: #5a3825;
 $cookie-button-bg-color: #e0c3a6;
 
 $todo-bg-color: #eaf6ff;
-$priority-colors: (
-    "high": #f70000,
+$priority-colors: ("high": #f70000,
     "normal": #ffd000,
-    "low": #01aeff
-);
+    "low": #01aeff);
