--- a/public/styles/scss/components/_cookie-banner.scss
+++ b/public/styles/scss/components/_cookie-banner.scss
@@ -1,4 +1,4 @@
-#cookieConsentBanner {
+#cookie-consent-banner {
     display: none;
     flex-direction: column;
     align-items: center;
@@ -36,7 +36,7 @@
         }
     }
 
-    #acceptCookieConsent {
+    #accept-cookie-consent {
         margin-top: 10px;
         padding: 10px 20px;
         background-color: $cookie-button-bg-color;
