--- a/public/styles/scss/pages/_home.scss
+++ b/public/styles/scss/pages/_home.scss
@@ -3,7 +3,6 @@
     transition: filter 2s ease;
 }
 
-
 .modal {
     display: none;
     position: fixed;
@@ -62,7 +61,6 @@
     }
 }
 
-
 .close {
     color: #aaa;
     float: right;
@@ -77,7 +75,7 @@
     }
 }
 
-.registerBox {
+.register-box {
     display: flex;
     flex-direction: column;
 
