--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -1,48 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/css/main.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" href="/favicons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-
-
-    <% if (content==='home' ) { %>
-        <script type="module" src="../js/auth.js"></script>
-        <script type="module" src="../js/googleSignIn.js"></script>
-        <script src="https://accounts.google.com/gsi/client" async defer></script>
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <% } %>
-
-            <script type="module" src="/js/cookieHandler.js"></script>
-
-
-            <title>Task Master</title>
-</head>
+<%- include('_head') %>
 
 <body>
-    <header class="header">
-        <h1>Task Master</h1>
-        <nav class="topnav">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <%- include(content) %>
+    <%- include('_header') %>
 
-        <footer>
-            <p>Made with love in Berlin</p>
-        </footer>
+    <%- include(content || 'pages/404') %>
 
+    <%- include('_footer') %>
+
+    <script type="module" src="/js/cookieHandler.js"></script>
 
 </body>
 
