Fix minor problems

--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -11,7 +11,7 @@
 
     <%- include('_footer') %>
 
-    <script type="module" src="/js/cookieHandler.js"></script>
+<!---    <script type="module" src="/js/cookieHandler.js"></script> -->
 
 </body>
 
