--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -8,13 +8,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id"
+        content="116568495505-3bnm8atka0uvirhu9rf5k4ol631n69a9.apps.googleusercontent.com">
+    <script type="module" src="../../js/googleSignIn.js"></script> -->
 
-    <% if (content==='home' ) { %>
     <script type="module" src="../../js/auth.js"></script>
-    <script type="module" src="../../js/googleSignIn.js"></script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <% } %>
-
     <title>Task Master</title>
 </head>
