--- a/views/partials/_login-form.ejs
+++ b/views/partials/_login-form.ejs
@@ -1,9 +1,8 @@
 <form id="login-form" action="/login" method="POST">
     <h2>Login</h2>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <input type="text" id="login-username" name="username" placeholder="Username" autocomplete="username">
     <input type="password" id="login-password" name="password" placeholder="Password" autocomplete="current-password">
     <button id="login-btn">Log In</button>
     <hr>
-    <button id="register-btn" class="register-btn">Create new account</button>
+    <button id="create-new-account-btn" class="create-new-account-btn">Create new account</button>
 </form>
