--- a/public/styles/scss/components/_buttons.scss
+++ b/public/styles/scss/components/_buttons.scss
@@ -10,7 +10,6 @@
     transition: background-color 0.3s;
 }
 
-
 #login-btn {
     @extend %button-style;
     background-color: #808080;
@@ -40,7 +39,7 @@
     }
 }
 
-#register-btn {
+#create-new-account-btn {
     @extend %button-style;
     background-color: #42b72a;
     font-size: 18px;
