--- a/public/styles/scss/layout/_header.scss
+++ b/public/styles/scss/layout/_header.scss
@@ -3,4 +3,18 @@ header {
     color: $secondary-color;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    padding: 10px;
+
+    .user-profile-icon img {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    #profile-button {
+        width: 50px;
+        height: 50px;
+    }
 }
