--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,7 @@
 <header class="header">
     <h1>Task Master</h1>
     <%- include('_navbar') %>
+    <button id="profile-button" class="user-profile-icon">
+        <img src="images/profile-user.png" alt="User Profile" />
+    </button>
 </header>
