Fix authentication middleware

--- a/views/partials/_new-task-form.ejs
+++ b/views/partials/_new-task-form.ejs
@@ -8,6 +8,6 @@
         <option value="High">High</option>
     </select>
 
-    <button id="add-task-btn" onclick="addTask()">Add Task</button>
+    <button id="add-task-btn">Add Task</button>
 
 </div>
