--- a/views/partials/_register-box.ejs
+++ b/views/partials/_register-box.ejs
@@ -26,7 +26,8 @@
             <div id="username-feedback"></div>
             <input type="text" id="register-username" name="username" placeholder="Username" autocomplete="username">
             <div id="password-feedback"></div>
-            <input type="password" id="register-password" name="password" placeholder="Password" autocomplete="new-password">
+            <input type="password" id="register-password" name="password" placeholder="Password"
+                autocomplete="new-password">
             <button id="sign-up-btn" disabled>Sign Up</button>
         </form>
     </div>
