Fix edit-task-modal identifier

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,4 +13,4 @@
 <script type="module" src="../../js/googleSignIn.js"></script> -->
 
 
-<%- include('_edit-task-box') %>
+<%- include('_edit-task-modal') %>
