--- a/public/styles/scss/components/_forms.scss
+++ b/public/styles/scss/components/_forms.scss
@@ -6,7 +6,6 @@
     margin: 10px;
     text-align: center;
 
-
     input[type="text"],
     input[type="password"] {
         width: 100%;
@@ -17,4 +16,21 @@
         box-sizing: border-box;
     }
 
+}
+
+#register-form {
+    display: flex;
+    flex-direction: column;
+
+    label {
+        margin-bottom: 5px;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+    }
 }
