--- a/public/styles/scss/pages/_tasks.scss
+++ b/public/styles/scss/pages/_tasks.scss
@@ -8,6 +8,61 @@ h2 {
 }
 
 
+.edit-task-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+
+    &-content {
+        background-color: #fff;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        width: 80%;
+        max-width: 500px;
+        text-align: center;
+
+        h2 {
+            margin-bottom: 20px;
+            color: #333;
+            font-size: 24px;
+        }
+
+
+    }
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+
+    &:hover,
+    &:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 #new-task-form {
@@ -46,10 +101,6 @@ h2 {
         }
     }
 }
-
-
-
-
 
 
 
