--- a/views/partials/_edit-task-modal.ejs
+++ b/views/partials/_edit-task-modal.ejs
@@ -1,8 +1,8 @@
-<div id="edit-task-modal" class="modal">
+<div id="edit-task-modal" class="edit-task-modal">
     <div class="modal-content">
-        <span class="close-button" onclick="closeEditModal()">&times;</span>
+        <span class="close" onclick="closeEditModal()">&times;</span>
         <h2>Edit Task</h2>
-        <form id="edit-task-form">
+        <form id="form">
             <input type="hidden" id="edit-task-id">
             <div>
                 <label for="edit-task-title">Title:</label>
@@ -24,7 +24,7 @@
                     <option value="Low">Low</option>
                 </select>
             </div>
-            <button type="button" onclick="submitEditTask()">Save Changes</button>
+            <button type="button" id="save-edit-task-btn" onclick="submitEditTask()">Save Changes</button>
         </form>
     </div>
 </div>
