--- a/views/partials/_edit-task-modal.ejs
+++ b/views/partials/_edit-task-modal.ejs
@@ -1,5 +1,5 @@
 <div id="edit-task-modal" class="edit-task-modal">
-    <div class="modal-content">
+    <div class="edit-task-modal-content">
         <span class="close" onclick="closeEditModal()">&times;</span>
         <h2>Edit Task</h2>
         <form id="form">
@@ -24,6 +24,7 @@
                     <option value="Low">Low</option>
                 </select>
             </div>
+            <button type="button" id="delete-task-btn" onclick="deleteTask()">Delete</button>
             <button type="button" id="save-edit-task-btn" onclick="submitEditTask()">Save Changes</button>
         </form>
     </div>
